SABADBAN-596 8 fix some issues with maxlength extension , various bug fixes: 596, 603, 605, 638, 640, 644, 645, 652, 654

--- a/SabadBan/SabadBan/en.lproj/Localizable.strings
+++ b/SabadBan/SabadBan/en.lproj/Localizable.strings
@@ -35,6 +35,7 @@
 "Index" = "Index";
 "Count" = "Count";
 "Percent" = "Percent";
+"marketStatus" = "Market Status:";
 
 //MARK:- IndexDetails Strings
 "Day" = "Day" ;
