--- a/SabadBan/SabadBan/fa.lproj/Localizable.strings
+++ b/SabadBan/SabadBan/fa.lproj/Localizable.strings
@@ -36,6 +36,7 @@
 "Index" = "شاخص";
 "Value" = "مقدار";
 "Percent" = "درصد";
+"marketStatus" = "وضعیت بازار";
 
 //mark:- IndexDetails Strings
 "Day" = "روز" ;
